Fix safari CSS cutoff bug

--- a/css/contact.scss
+++ b/css/contact.scss
@@ -34,6 +34,12 @@ body {
     padding: 5px;
   }
 
+  .email {
+    td {
+      padding-top: 20px;
+    }
+  }
+
   i {
     padding-top: 3px;
     font-size: 1.25em;
